[tool.poetry]
name = "nokia-tr143-speed-test-server"
version = "0.1.0"
description = ""
authors = ["boxops <olahbalazs@outlook.com>"]
readme = "README.md"
packages = [{include = "nokia_tr143_speed_test_server"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
